fix(login/register): language templates and forms (#2375)
* Create _login.html view template

* library loads & loginForm

* remove login views

* format documents

* file end formats

* add default english

* Login - it & es

* Formatting;

* Login form css in its own stylesheet;

* loginForm - formatting;

* Form - input css;

Now includes input of type email and password.

* Translations;

* Languages added to options;

* Login - body color now base secondary.

* Login form - input object default;

* Register view - initial commit;

* register form - module added;

* Register view - removed outdated css;

* Register form;

* Formatting;

* Formatting;

* register Form + check function.

* One stylesheet for user forms;

* Register form - deleted outdated views;

* Register - added 'de'

* Register - added pl;

* Register - added ja;

* Register - added es;

* Register - added it;

* Register - added zh;

* Register - translations;

* Register - added a scratch for korean dictionary. Removed /register directory.

* Register template - removed default German;

* data-template

* Login template now supporting registration view.

* Removed helper console.log.

* register form - dictionary text with tags as inner html.

* Docs;

* Register - input attribute fix;

* Login form - css;

* registerForm - form now has default action without button formaction override.

* Inputs css - solid border for better visibility.

* Inputs css cleanup;

* register formaction

* Korean dictionary;

* loginForm revision

* Added korean dictionary.

* Login form - formatting;

* regsiter form legalese

* input lookups

* fix passwordRetypeInput check

* dictionary updates

* Assign msg to params

* fr dictionary update;

* It dictionary;

* pl dictionary;

* register form - pattern attribute;

* use prefered Number.parseFloat

* use globalThis instead of window

* login form - button css;

* Register error message.

* Formatting;

* Formatting;

* login form - layout;

* register form -

--- a/public/css/base/_inputs.css
+++ b/public/css/base/_inputs.css
@@ -29,13 +29,17 @@ textarea {
   width: 100%;
   resize: none;
   border: none;
-  border-bottom: 1px dotted var(--color-border);
+  border: 1px solid var(--color-border);
   background-color: var(--color-base);
   color: var(--color-font);
   border-radius: 3px;
 
   &:focus {
     outline: none;
+  }
+
+  &:-webkit-autofill {
+    box-shadow: 0 0 0px 1000px var(--color-tertiary) inset;
   }
 }
 
@@ -67,12 +71,14 @@ input[type='datetime-local'] {
 }
 
 input[type='text'],
+input[type='email'],
+input[type='password'],
 input[type='number'] {
   padding: 5px;
-  border: none;
+  border-radius: 3px;
   background-color: var(--color-base);
   color: var(--color-font);
-  border-bottom: 1px dotted var(--color-border);
+  border: 1px solid var(--color-border);
   display: inline-block;
   width: 100%;
   min-width: 2.4ch;
