--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1074,6 +1074,13 @@ dialog {
       button.group {
         position: relative;
         background-color: var(--color-primary);
+        &.active {
+          background-color: var(--color-active);
+          .material-symbols-outlined.state-icon:after {
+            content: "keyboard_double_arrow_right";
+            background-color: var(--color-primary);
+          }
+        }
         & > span:first-of-type {
           width: 100%;
         }
@@ -1090,7 +1097,7 @@ dialog {
           border-radius: 50%;
           box-shadow: var(--box-shadow);
           margin: 0 1px;
-          content: "chevron_left";
+          content: "keyboard_double_arrow_left";
         }
       }
       .submenu {
@@ -1098,6 +1105,10 @@ dialog {
         gap: 0.5em;
         background-color: var(--color-base-tertiary);
         border-radius: 1em;
+        button,
+        a {
+          clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+        }
         a {
           display: inline-block;
         }
@@ -1113,6 +1124,9 @@ dialog {
     width: 3em;
     height: 3em;
     text-align: center;
+  }
+  .hexagon {
+    clip-path: polygon(50% 0%, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
   }
 }
 
