--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1063,7 +1063,6 @@ dialog {
   opacity: 0.95;
   margin: 0.5%;
   border-radius: 5%;
-  padding: 0.5%;
   & > ul:first-of-type {
     position: relative;
     & > li {
@@ -1102,8 +1101,8 @@ dialog {
       }
       .submenu {
         display: flex;
-        gap: 0.5em;
-        background-color: var(--color-base-tertiary);
+        gap: 1px;
+        background-color: var(--color-primary);
         border-radius: 1em;
         button,
         a {
