update html formatting

--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="{{language}}">
   <head data-dir="{{dir}}">
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
     <link
       rel="icon"
       type="image/x-icon"
       href="{{dir}}/public/icons/favicon.ico"
     >
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{dir}}/public/css/ui.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{dir}}/public/css/ui.css">
     <script type="module" src="{{dir}}/public/js/lib/mapp.js" defer></script>
     <script type="module" src="{{dir}}/public/js/lib/ui.js" defer></script>
     <style>
