--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -7,8 +7,8 @@
       type="image/x-icon"
       href="{{dir}}/public/icons/favicon.ico"
     >
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link
       rel="stylesheet"
