--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="{{language}}">
   <head data-dir="{{dir}}" data-login="{{login}}">
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
 
     <link
       rel="icon"
       type="image/x-icon"
       href="{{dir}}/public/icons/favicon.ico"
     >
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
@@ -21,8 +21,8 @@
     ></script>
 
     <!-- Load XYZ / MAPP stylesheet and library. -->
-    <link rel="stylesheet" href="{{dir}}/public/css/mapp.css" />
-    <link rel="stylesheet" href="{{dir}}/public/css/ui.css" />
+    <link rel="stylesheet" href="{{dir}}/public/css/mapp.css">
+    <link rel="stylesheet" href="{{dir}}/public/css/ui.css">
 
     <script type="module" src="{{dir}}/public/js/lib/mapp.js" defer></script>
     <script type="module" src="{{dir}}/public/js/lib/ui.js" defer></script>
@@ -74,7 +74,7 @@
       &:hover {
         cursor: row-resize;
       }
-    }    
+    }
 
     #ctrls {
       isolation: isolate;
