Css changed value for radio;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -92,6 +92,9 @@
     color: var(--color-font);
     border-radius: 2px;
   }
+  label.radio span.material-symbols-outlined:after {
+    color: var(--color-active);
+  }
   .material-symbols-outlined:after {
     color: var(--color-font);
   }
