--- a/public/css/layout/_image_preview.css
+++ b/public/css/layout/_image_preview.css
@@ -21,6 +21,7 @@
       width: 50px;
       height: 50px;
       background-color: var(--color-primary);
+      color: var(--color-font-contrast);
     }
   }
 }
