--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1217,6 +1217,7 @@ form.login-form {
       width: 50px;
       height: 50px;
       background-color: var(--color-primary);
+      color: var(--color-font-contrast);
     }
   }
 }
