--- a/public/css/layout/_image_preview.css
+++ b/public/css/layout/_image_preview.css
@@ -13,14 +13,14 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    display: flex;
+    justify-content: flex-end;
 
     & > .btn-close {
-      position: absolute;
-      top: 5%;
-      right: 5%;
       width: 50px;
       height: 50px;
       background-color: var(--color-primary);
+      color: var(--color-font-contrast);
     }
   }
 }
