--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1210,13 +1210,13 @@ form.login-form {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    display: flex;
+    justify-content: flex-end;
     & > .btn-close {
-      position: absolute;
-      top: 5%;
-      right: 5%;
       width: 50px;
       height: 50px;
       background-color: var(--color-primary);
+      color: var(--color-font-contrast);
     }
   }
 }
