--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -449,6 +449,8 @@
 
     locale.syncPlugins ??= ['zoomBtn', 'admin', 'login'];
 
+    mapp.hooks.set({locale:locale.key});
+
     // Create mapview
     const mapview = await mapp.Mapview({
       host: mapp.host,
