--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap'); */
+
+@font-face {
+  font-family: 'Titillium Web';
+  font-weight: 400;
+  src: url('./titillium-web-v19-latin_latin-ext-regular.woff2') format('woff2');
+}
 
 body {
   font-family: 'Titillium Web', sans-serif;
