--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,4 +1,3 @@
-@import "https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,600;1,200;1,300&display=swap";
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0";
 
 /* public/css/base/_colours.css */
@@ -184,6 +183,11 @@ button {
 }
 
 /* public/css/base/_globals.css */
+@font-face {
+  font-family: "Titillium Web";
+  font-weight: 400;
+  src: url("./titillium-web-v19-latin_latin-ext-regular-UU7IJPEB.woff2") format("woff2");
+}
 body {
   font-family: "Titillium Web", sans-serif;
   font-size: 0.8em;
