--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -61,6 +61,22 @@
       }
     }
 
+   #ctrls-divider-collapsed {
+      grid-row: 1 / 4;
+      grid-column: 2;
+      background-color: var(--color-primary);
+      box-shadow: 3px 0px 6px -3px var(--color-base-tertiary);
+      isolation: isolate;
+      position: relative;
+      z-index: 2;
+      width: 3px;
+
+      &:hover {
+        cursor: col-resize;
+      }
+    }
+
+
     #tabview-divider {
       position: relative;
       grid-row: 2;
@@ -216,6 +232,11 @@
     ></div>
 
     <div id="ctrls-divider" class="mobile-display-none"></div>
+    <div
+      id="ctrls-divider-collapsed"
+      class="mobile-display-none"
+      style="display: none"
+    ></div>
 
     <div id="ctrls">
       <div id="ctrl-tabs" class="hover">
@@ -286,13 +307,34 @@
       }
     });
 
+    document.getElementById('ctrls-divider').ondblclick = (e) => {
+      let pageX = (e.touches && e.touches[0].pageX) || e.pageX;
+
+      if(pageX < 75) {
+        document.body.style.gridTemplateColumns = `350px 10px auto`;
+
+        return;
+      }
+
+      document.body.style.gridTemplateColumns = `0px 10px auto`;
+
+
+    }
+
     // ResizeHandler for #CTRLS
     mapp.ui.utils.resizeHandler({
       target: document.getElementById('ctrls-divider'),
       resizeEvent: (e) => {
         let pageX = (e.touches && e.touches[0].pageX) || e.pageX;
 
-        if (pageX < 350) return;
+        if (pageX < 75) {
+          document.body.style.gridTemplateColumns = `0px 10px auto`;
+          return;
+        };
+
+        if(pageX < 200) {
+           return;
+        }
 
         // Half width snap.
         if (pageX > window.innerWidth / 2) pageX = window.innerWidth / 2;
