--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -76,37 +76,6 @@
       }
     }
 
-    #ctrls {
-      isolation: isolate;
-    }
-
-    #ctrl-tabs {
-      padding: 0.5em;
-      width: 100%;
-      display: flex;
-    }
-
-    #ctrl-tabs>div {
-      flex-grow: 1;
-      font-size: 2em;
-
-    }
-
-    #ctrl-panel {
-      flex-grow: 1;
-      overflow-y: auto;
-    }
-
-    #ctrl-panel>div {
-      display: none;
-      padding: 10px;
-    }
-
-    #ctrl-panel>div.active {
-      display: block;
-    }
-
-
     @media only screen and (min-width: 768px) {
       body {
         display: grid;
@@ -204,8 +173,8 @@
     <div id="ctrls-divider" class="mobile-display-none"></div>
 
     <div id="ctrls">
-      <div id="ctrl-tabs" class="hover"></div>
-      <div id="ctrl-panel"></div>
+      <!-- <div id="ctrl-tabs" class="hover"></div>
+      <div id="ctrl-panel"></div> -->
     </div>
 
     <script type="module">
@@ -296,6 +265,26 @@
       },
     });
 
+    const tabview = document.getElementById('Tabview');
+
+    mapp.ui.Tabview({
+      node: tabview,
+      id: 'tabview',
+      showTab: () => {
+        // Show the tabview if not already visible.
+        if (tabview.classList.contains('desktop-display-none')) {
+          tabview.classList.remove('desktop-display-none');
+          document.body.style.gridTemplateRows = 'auto 10px 200px';
+        }
+      },
+      removeLastTab: () => {
+        // Hide tabview if tab had no siblings.
+        tabview.classList.add('desktop-display-none');
+        document.body.style.gridTemplateRows = 'auto 0 0';
+        mapview.Map.getTargetElement().style.marginTop = 0;
+      },
+    });
+
     // Get list of accessible locales from Workspace API.
     let locales = await mapp.utils.xhr(
       `${mapp.host}/api/workspace/locales`,
@@ -324,68 +313,6 @@
         contained: true,
       });
     }
-
-    locale.syncPlugins ??= ['zoomBtn', 'admin', 'login'];
-
-   // Create mapview
-    const mapview = await mapp.Mapview({
-      host: mapp.host,
-      target: OL,
-      locale: locale,
-      hooks: true,
-      scrollWheelZoom: true,
-      loadPlugins: true,
-      mapButton: document.getElementById('mapButton'),
-      controlTabs: document.getElementById('ctrl-tabs'),
-      controlPanels: document.getElementById('ctrl-panel'),
-      attribution: {
-        target: document.getElementById('Map'),
-        logo: mapp.utils.html.node`
-        <a class="logo" target="_blank" href="https://geolytix.co.uk">
-          <img src="https://geolytix.github.io/public/geolytix_mapp.svg" alt="GEOLYTIX MAPP Logo">`,
-        links: {
-          [`XYZ v${mapp.version}`]: 'https://github.com/GEOLYTIX/xyz',
-          ['SHA']: `https://github.com/GEOLYTIX/xyz/commit/${mapp.hash}`,
-          Openlayers: 'https://openlayers.org',
-        },
-      },
-    });
-
-    mapview.locale.controls ??= [
-      'layers', {key: 'locations', style: {display: 'none'}, icon: "location_on"}
-    ]
-
-    mapview.locale.locations ??= {};
-
-    //Create tabs and panels for controls.
-    mapp.ui.elements.controls({
-      tabTarget: mapview.controlTabs,
-      panelTarget: mapview.controlPanels,
-      ctrlTarget: document.getElementById('ctrls'),
-      tabs: mapview.locale.controls
-    })
-
-    const layersTab = document.getElementById('layers');
-
-    const tabview = document.getElementById('Tabview');
-
-    mapp.ui.Tabview({
-      node: tabview,
-      id: 'tabview',
-      showTab: () => {
-        // Show the tabview if not already visible.
-        if (tabview.classList.contains('desktop-display-none')) {
-          tabview.classList.remove('desktop-display-none');
-          document.body.style.gridTemplateRows = 'auto 10px 200px';
-        }
-      },
-      removeLastTab: () => {
-        // Hide tabview if tab had no siblings.
-        tabview.classList.add('desktop-display-none');
-        document.body.style.gridTemplateRows = 'auto 0 0';
-        mapview.Map.getTargetElement().style.marginTop = 0;
-      },
-    });
 
     if (mapp.user?.locale instanceof Object) {
 
@@ -430,12 +357,36 @@
         },
       });
 
-      layersTab.appendChild(localesDropdown);
+      document.getElementById('layers')?.appendChild(localesDropdown);
     }
 
     if (!window.ol) await mapp.utils.olScript();
 
+    locale.syncPlugins ??= ['zoomBtn', 'admin', 'login'];
+
     mapp.hooks.set({locale:locale.key});
+
+    // Create mapview
+    const mapview = await mapp.Mapview({
+      host: mapp.host,
+      target: OL,
+      locale: locale,
+      hooks: true,
+      scrollWheelZoom: true,
+      loadPlugins: true,
+      mapButton: document.getElementById('mapButton'),
+      attribution: {
+        target: document.getElementById('Map'),
+        logo: mapp.utils.html.node`
+        <a class="logo" target="_blank" href="https://geolytix.co.uk">
+          <img src="https://geolytix.github.io/public/geolytix_mapp.svg" alt="GEOLYTIX MAPP Logo">`,
+        links: {
+          [`XYZ v${mapp.version}`]: 'https://github.com/GEOLYTIX/xyz',
+          ['SHA']: `https://github.com/GEOLYTIX/xyz/commit/${mapp.hash}`,
+          Openlayers: 'https://openlayers.org',
+        },
+      },
+    });
 
     if (!locale.layers?.length && !(locale instanceof Error)) {
       mapp.ui.elements.dialog({
@@ -453,8 +404,48 @@
     // Add layers to mapview.
     await mapview.addLayer(locale.layers);
 
-    //Load controls once layers are added
-    mapp.controls.loadControls(mapview);
+    //Create tabs and panels for controls.
+    const control = mapp.ui.elements.control({
+      target: document.getElementById('ctrls')
+    })
+
+    const layersPanel = mapp.utils.html.node`<div id="layers" class="active">`
+
+    control.add({
+      key: 'layers',
+      panel: layersPanel
+    })
+    
+    mapp.ui.layers.listview({
+      target: layersPanel,
+      layers: mapview.layers,
+    });
+
+    const locationsPanel = mapp.utils.html.node`<div id="locations">`
+
+    control.add({
+      key: 'locations',
+      icon: 'location_on',
+      panel: locationsPanel
+    })
+    
+    mapp.ui.locations.listview({
+      target: locationsPanel,
+      mapview,
+    });    
+
+    /*
+    if (mapview.locale.gazetteer) {
+      mapp.ui.Gazetteer(
+        Object.assign(mapview.locale.gazetteer, {
+          mapview,
+          target: locationsTab.appendChild(mapp.utils.html.node`<div>`),
+        }),
+      );
+    } else {
+      document.querySelector('[data-id=locations]').style.display = 'none';
+    }
+    */
 
     // Begin highlight interaction.
     mapview.interactions.highlight();
