remove commented elements from ctrl node

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -172,10 +172,7 @@
 
     <div id="ctrls-divider" class="mobile-display-none"></div>
 
-    <div id="ctrls">
-      <!-- <div id="ctrl-tabs" class="hover"></div>
-      <div id="ctrl-panel"></div> -->
-    </div>
+    <div id="ctrls"></div>
 
     <script type="module">
     console.log(`MAPP v${mapp.version}`);
