feat(Controls): Adds a way to add more options to the `ctrls` element.  (#2486)
* Controls separate

* Add layer control

* Use a control function for layer and location listviews

* remove logger/unused const

* const instead of let

* Fix sonarCloud issues

* dont use negation operator

* Documentation

* control element cleanup

* uncomment gazetteer

* remove commented elements from ctrl node

* tabs element should be a nav

* fix locales dropdown assignment

* Add gazetteer as its own control and panel/always display locations

* add a referrence to a control element to mapview

* remove duplicate resources entry

* Documentation for control

* rename controlNav to controlPanel

* add in gazetteer language entry

---------

Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: Rob Hurst <robert.hurst@geolytix.co.uk>
Co-authored-by: Agata Brok <cityremade@users.noreply.github.com>
Co-authored-by: Rob Hurst <43169158+RobAndrewHurst@users.noreply.github.com>

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -552,6 +552,37 @@ label.checkbox {
   }
 }
 
+/* public/css/elements/_control.css */
+.mapp-control {
+  isolation: isolate;
+  > .tabs {
+    padding: 0.5em;
+    width: 100%;
+    display: flex;
+    > div {
+      flex-grow: 1;
+      font-size: 2em;
+    }
+  }
+  > .panels {
+    flex-grow: 1;
+    overflow-y: auto;
+    .no_locations {
+      margin: 5% 30%;
+      color: var(--color-font-mid);
+      font-style: italic;
+      font-weight: bold;
+    }
+    > div {
+      display: none;
+      padding: 10px;
+    }
+    > div.active {
+      display: block;
+    }
+  }
+}
+
 /* public/css/elements/_dialog.css */
 .headerDrag {
   cursor: grab;
