--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -14,6 +14,12 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     >
 
+    <link rel="preload" href="{{dir}}/public/css/material-icons-outlined.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-italic.woff2" as="font" type="font/woff2" crossorigin>
+
+    <!-- <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" as="font" type="font/woff2" crossorigin> -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/ol@v10.6.1/dist/ol.js"
       integrity="sha384-R02sHnzL8yl/uvLZvMsfgBOMBIOOHLpuLNo4dLuWQWFun1sxEWJej+SPwiGxaeGd"
