--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -2,8 +2,16 @@
 
 @font-face {
   font-family: 'Titillium Web';
+  font-style: normal;
   font-weight: 400;
-  src: url('./titillium-web-v19-latin_latin-ext-regular.woff2') format('woff2');
+  src: url(titillium-web-v19-latin_latin-ext-regular.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: italic;
+  font-weight: 400;
+  src: url(titillium-web-v19-latin_latin-ext-italic.woff2) format('woff2');
 }
 
 body {
