--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -350,10 +350,10 @@ input[type=search]::-webkit-calendar-picker-indicator {
   src: url(material-icons-outlined.woff2) format("woff2");
 }
 .material-symbols-outlined-important {
-  font-family: "Material Symbols Outlined" !important;
+  font-family: "Material Symbols Outlined", sans-serif !important;
 }
 .material-symbols-outlined {
-  font-family: "Material Symbols Outlined";
+  font-family: "Material Symbols Outlined", sans-serif;
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
